ipc/ipdl/test/ipdl/ok/Parray_Union.ipdl
union Union {
    int[];
    int;
    double;
};

sync protocol Parray_Union {
parent:
    sync Msg(Union u, Union[] au) returns (Union r);
};
