ipc/ipdl/test/ipdl/error/trans_WrongName2.ipdl
protocol trans_WrongName2 {

parent:
    Msg();
    delete();

state S1:
    answer Msg goto S1;
    recv delete;
};
